<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/edittext_rounder"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_rounder"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            android:autofillHints=""
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/login_sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            android:background="@drawable/background_ripple_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <Button
            android:id="@+id/buttonLogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/background_ripple_google"
            android:text="@string/login_sign_in_google"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

        <Button
            android:id="@+id/buttonCreateAcount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:background="@drawable/background_ripple"
            android:text="@string/login_create_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>