<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.ForgotPasswordActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounder"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/login_edit_text_space"
        android:paddingRight="@dimen/login_edit_text_space"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonForgot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_xl_height"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/background_ripple_bg"
        android:text="@string/login_reset_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/login_text_xl_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGoLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_xl_height"
        android:background="@drawable/background_ripple"
        android:text="@string/login_go_login"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>